| Summary: | ASTERISK-29311: res_odbc_transaction sets forcecommit default value based on isolation level instead of forcecommit | ||
| Reporter: | Jaco Kroon (jkroon) | Labels: | |
| Date Opened: | 2021-02-23 05:21:53.000-0600 | Date Closed: | 2021-02-25 07:50:07.000-0600 |
| Priority: | Minor | Regression? | Yes |
| Status: | Closed/Complete | Components: | Resources/res_odbc |
| Versions: | GIT | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When using ODBC(transaction,dsn)=foo forcecommit is being set based on the dsn's isolation value instead of the forcecommit value from the DSN.
Further, the documentation (core show function ODBC) states that the value defaults to false, whereas the DSN's value defaults to false, and res_odbc_transaction's value defaults to whatever the DSNs value is. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-02-23 05:21:54.191-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2021-02-25 07:50:08.527-0600 Change 15511 merged by Friendly Automation: res_odbc_transaction: correctly initialise forcecommit value from DSN. [https://gerrit.asterisk.org/c/asterisk/+/15511|https://gerrit.asterisk.org/c/asterisk/+/15511] By: Friendly Automation (friendly-automation) 2021-02-25 08:47:49.868-0600 Change 15492 merged by George Joseph: res_odbc_transaction: correctly initialise forcecommit value from DSN. [https://gerrit.asterisk.org/c/asterisk/+/15492|https://gerrit.asterisk.org/c/asterisk/+/15492] By: Friendly Automation (friendly-automation) 2021-02-25 08:48:09.066-0600 Change 15512 merged by George Joseph: res_odbc_transaction: correctly initialise forcecommit value from DSN. [https://gerrit.asterisk.org/c/asterisk/+/15512|https://gerrit.asterisk.org/c/asterisk/+/15512] | ||